corrected the bug causing the text in the gallery to spill from the images. Added the text Manor the the hero section and also added the text Lake to the navbar.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -80,29 +80,32 @@ main{
                     box-shadow: 2px 1px 15px black;
                     height: 300px;
                     margin: 18px auto;
+                    position: relative;
                     img {
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
                         border-radius: $gallery_border_radius;
-                        position: relative;
+                        
                     }
                     .description {
                         position: absolute;
-                        margin: -6.4em 5px;
+                        bottom: 0;
                         border-radius: $gallery_border_radius;
-                        width: 90%;
-                        padding: 8px 4px 0px;
-                        background:rgba(0, 0, 0, .6);
+                        width: 100%;
+                        padding: 2px 6px;
+                        background: linear-gradient(160deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8));
                         color: #fff;
                         text-align: center;
                         h4{                            
                             margin-bottom: unset;
-                            font-size: 1.4em;
+                            font-size: 1.2em;
                             font-weight: bold;
                         }
                         p{
                             font-style: italic;
+                            font-weight: 1em;
+                            margin: unset;
                         }
                     }
                 }
